--- a/Snake/App.xaml
+++ b/Snake/App.xaml
@@ -7,5 +7,8 @@
         <SolidColorBrush x:Key="BackgroundColor">#211E2B</SolidColorBrush>
         <SolidColorBrush x:Key="GridBackgroundColor">#312C40</SolidColorBrush>
         <SolidColorBrush x:Key="GridLineColor">#4F4867</SolidColorBrush>
+        <SolidColorBrush x:Key="TextColor">#EBEBEB</SolidColorBrush>
+        <SolidColorBrush x:Key="OverLayColor">#7F000000</SolidColorBrush>
+        <FontFamily x:Key="MainFont">Asset/#Droid Sans Mono</FontFamily>
     </Application.Resources>
 </Application>
